--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   dio: ^5.4.3+1
   equatable: ^2.0.5
   json_annotation: ^4.8.1
+  internet_connection_checker_plus: ^2.3.0
+  flutter_dotenv: ^5.1.0
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - .env
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
