--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   internet_connection_checker_plus: ^2.3.0
   transparent_image: ^2.0.1
   flutter_typeahead: ^5.2.0
+  http: ^1.2.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -76,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - .env
 
   #   - images/a_dot_ham.jpeg
 
